# Controllers/HistoryController.js
@@ -1,10 +1,22 @@
 const History = require('../Models/History')
 
 const getHistoryAll = (req,res) => {
-    History.find().exec(function(err,historyInfo){
-        if (err) return console.error(err);
-        res.send(historyInfo)
-    })
+    switch(req.query.extansion){
+        case 'all':{
+            History.find().exec(function(err,historyInfo){
+                if (err) return console.error(err);
+                res.send(historyInfo)
+            })
+            break;
+        }
+        default:{
+            History.find({Extansion:req.query.extansion}).exec(function(err,historyInfo){
+                if (err) return console.error(err);
+                res.send(historyInfo)
+            })
+        }
+    }
+    
 }
 
 const postHistory = (req,res) => {
@@ -14,6 +26,7 @@ const postHistory = (req,res) => {
         res.send(historyToSaved)
     });
 }
+
 const getPatch = (req,res) => {
     // req.params.name
     History.find({Title:req.params.name}).exec(function(err,historyInfo){
