# Routes/DlcRoutes.js
@@ -2,6 +2,7 @@ const express = require('express')
 const router = express.Router()
 const DlcController = require('../Controllers/DlcController')
 
-router.get('/',DlcController.getAll)
+router.get('/page/:id',DlcController.getAll)
+router.post('/',DlcController.postDLC)
 
 module.exports = router
