# Routes/FilesRoutes.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const router = express.Router()
+const FileController = require('../Controllers/FilesController')
+
+router.get('/:name',FileController.getFile)
+
+module.exports = router
