# Routes/NewsRoutes.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const router = express.Router()
+const NewsController = require('../Controllers/NewsController')
+
+router.get('/',NewsController.getNewsByPart)
+
+module.exports = router
