# Routes/TutorialRoutes.js
@@ -3,6 +3,8 @@ const router = express.Router()
 const tutorialController = require('../Controllers/TutorialController')
 
 router.get('/',tutorialController.getClassTutorials)
+router.get('/all',tutorialController.getAllClassTutorials)
 router.get('/:id',tutorialController.getClassTutorialsByID)
+router.post('/',tutorialController.postNewTutorail)
 
 module.exports = router
